--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <html>
-    <head>
-        <title>Contact Saya</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div class="container">
+
+<head>
+    <title>Contact Saya</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div class="container">
         <!-- Navigation Bar -->
         <div class="navbar-container">
             <ul class="ul-navbar">
@@ -20,11 +22,11 @@
             </ul>
         </div>
         <!-- Navigation Bar Selesai -->
-        
+
         <!-- Content -->
         <div class="content-container">
             <b class="a-content">
-                <img src="wa.png" class="img-content"/>
+                <img src="wa.png" class="img-content" />
                 <p class="contact-text">
                     SILAHKAN KONTAK SAYA DI NOMOR WA BERIKUT:<br>
                     <a href="https://wa.me/62895342388496" target="_blank">+62xxxxxxxxxxxx</a>
@@ -38,6 +40,8 @@
             <h3 class="h3-footer">Website ini Dibuat Sepenuh Hati </h3>
         </div>
         <!-- Footer Selesai -->
-        </div>
-    </body>
+    </div>
+    <script src="data.js" type="text/javascript" />
+</body>
+
 </html>
