--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-    <head>
-        <title>WEB SAYA</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div class="container">
+
+<head>
+    <title>WEB SAYA</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div class="container">
         <!-- Navigation Bar -->
         <div class="navbar-container">
             <ul class="ul-navbar">
@@ -20,12 +22,17 @@
             </ul>
         </div>
         <!-- Navigation Bar Selesai -->
-        
+
         <!-- Content -->
         <div class="content-container">
             <a href="https://www.instagram.com/m_ainul_bashiroh?igsh=NGp1am9vejRvZG94" class="a-content">
-                <img src="Foto Diri.jpg" class="img-content"/>
+                <img src="Foto Diri.jpg" class="img-content" />
                 <p>MAMPIR KE INSTAGRAM KU YUK!!!</p>
+                
+                <!-- Data Start -->
+                <div id="biodata"> </div>
+                <!-- Data End -->
+
             </a>
         </div>
         <!-- Content Selesai -->
@@ -35,6 +42,8 @@
             <h3 class="h3-footer">Website ini Dibuat Sepenuh Hati </h3>
         </div>
         <!-- Footer Selesai -->
-        </div>
-    </body>
+    </div>
+    <script src="data.js" type="text/javascript" />
+</body>
+
 </html>
