--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
 <html>
-    <head>
-        <title>About Me</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div class="container">
+
+<head>
+    <title>About Me</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div class="container">
         <!-- Navigation Bar -->
         <div class="navbar-container">
             <ul class="ul-navbar">
@@ -20,11 +22,11 @@
             </ul>
         </div>
         <!-- Navigation Bar Selesai -->
-        
+
         <!-- Content -->
         <div class="content-container">
-            <a href="https://www.instagram.com/m_ainul_bashiroh?igsh=NGp1am9vejRvZG94" class="a-content">
-                <img src="Portofolio.jpg" class="img-content"/>
+            <a href="www.linkedin.com/in/muhammad-ainul-bashiroh-3951aa322" class="a-content">
+                <img src="Portofolio.jpg" class="img-content" />
                 <p>Berikut Portofolio Saya</p>
             </a>
         </div>
@@ -35,6 +37,8 @@
             <h3 class="h3-footer">Website ini Dibuat Sepenuh Hati </h3>
         </div>
         <!-- Footer Selesai -->
-        </div>
-    </body>
+    </div>
+    <script src="data.js" type="text/javascript" />
+</body>
+
 </html>
