--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
         <!-- Content -->
         <div class="content-container">
-            <a href="https://www.linkedin.com/in/muhammad-ainul-bashiroh-3951aa322" class="a-content">
+            <a href="https://www.linkedin.com/in/muhammad-ainul-bashiroh-3951aa322?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="a-content">
                 <img src="Portofolio.jpg" class="img-content" />
                 <p>Berikut Portofolio Saya</p>
             </a>
